--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Bald Sexy</title>
 </head>
 <body>
-    <p style="text-align: center;"><img src="jason-callan-002.png"/></p>
+    <p style="text-align: center;"><img src="./Jason-Callan-002.png"/></p>
     <p style="font-weight: 800; font-size: 36px; text-align: center; font-family: Verdana, Geneva, Tahoma, sans-serif;">Bald Sexy</p>
 </body>
 </html>
